# old-homepage

./: .gitignore  .travis.yml  Cargo.toml  README.md  identity.p12  localhost.crt  localhost.key  package.spec
chat/: Cargo.toml
migrations/20170328134649_answer/: down.sql  up.sql
migrations/20170328135713_question/: down.sql  up.sql
migrations/20170328142056_rename_question/: down.sql  up.sql
migrations/20170328144901_answer_flag/: down.sql  up.sql
migrations/20170328163845_id_suffix/: down.sql  up.sql
migrations/20170328170726_round/: down.sql  up.sql
migrations/20170328172602_round_question/: down.sql  up.sql
migrations/20170328173843_move_joker_used/: down.sql  up.sql
migrations/20170328174334_cascade/: down.sql  up.sql
migrations/20170328181717_player/: down.sql  up.sql
migrations/20170328183952_answer_in_round_question/: down.sql  up.sql
migrations/20170328184634_active/: down.sql  up.sql
migrations/20170331121700_rename_active/: down.sql  up.sql
migrations/20170331124936_obligatory_category_text/: down.sql  up.sql
migrations/20170331131006_add_unique/: down.sql  up.sql
migrations/20170331140305_remove_composite_pk/: down.sql  up.sql
migrations/20170401125310_answer_unique/: down.sql  up.sql
migrations/20170403144045_admin/: up.sql
migrations/20170404122320_init/: down.sql  up.sql
migrations/20170405174813_multiple_categories/: down.sql  up.sql
migrations/20170407150338_is_correct_not_null/: down.sql  up.sql
migrations/20170407161159_non_unique_entities/: up.sql
migrations/20170408231748_answer_in_round_question/: down.sql  up.sql
migrations/20170409140112_end_time_no_default/: down.sql  up.sql
migrations/20170409142517_round_category_fix/: up.sql
migrations/20170409160204_round_is_finished/: down.sql  up.sql
public/css/: layout.css
res/: index.html
res/public/css/: template.css
res/sites/: frame.hbs
res/templates/: frame.hbs  index.hbs  index.html  template.hbs
res/templates/contact/: contact.hbs  contact.html
res/templates/quiz/: admin.hbs  quiz.hbs  quiz_question.hbs  quiz_start.hbs
script/: deploy.sh
scripts/: deploy.sh  package.sh
src/: lib.rs  login_controller.rs  main.rs  quiz_controller.rs  routing.rs  session.rs  templating.rs
src/business/: crud.rs  crypto.rs  login.rs  mod.rs  quiz.rs  quiz_error.rs  round_data.rs
src/data/: crud.rs  mod.rs
src/data/model/: mod.rs  user_account.rs
src/presentation/: mod.rs
src/presentation/controller/: admin.rs  login.rs  mod.rs  play.rs  quiz.rs  score.rs
src/presentation/helper/: mod.rs  session.rs  templating.rs  util.rs
src/presentation/model/: admin.rs  answer.rs  asked_question.rs  category.rs  mod.rs  player.rs  question.rs  rank.rs  section.rs
src/quiz/: controller.rs  dao.rs  mod.rs  model.rs  schema.rs
view/: index.hbs
view/contact/: contact.hbs
view/layout/: layout.hbs
view/quiz/: admin.hbs  quiz_question.hbs  quiz_start.hbs  scoreboard.hbs
(+23 files in other folders)
