[package]
name = "homepage"
version = "0.5.8"
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
readme = "README.md"
homepage = "jnferner.com"
repository = "git@github.com:SirRade/homepage.git"
license = "AGPL-3.0"

[dependencies]
iron = "^0.5.1"
mime = "^0.2.3"
router = "^0.5.1"
mount = "^0.3.0"
staticfile = "^0.4.0"
diesel = { version = "^0.12.0", features = ["postgres", "serde_json"] }
diesel_codegen = { version = "^0.12.0", features = ["postgres"] }
dotenv = "^0.10.0"
postgres = "^0.14.0"
handlebars = "^0.25.2"
handlebars-iron = { version = "^0.23.0", features = ["unstable"] }
serde = "^0.9.12"
serde_derive = "^0.9.12"
serde_json = "^0.9.9"
redis = "^0.8.0"
iron-sessionstorage = { version = "^0.6.6", features = ["redis-backend"] }
clippy = {version = "^0.0.121", optional = true}

[features]
default = []

[badges]
travis-ci = { repository = "https://travis-ci.org/SirRade/chat.rs" }

[package.metadata.release]
sign-commit = true
upload-doc = true
