[package]
name = "homepage"
version = "0.8.4"
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
readme = "README.md"
homepage = "jnferner.com"
repository = "git@github.com:SirRade/homepage.git"
license = "AGPL-3.0"

[dependencies]
iron = "0.5"
iron-sessionstorage = { version = "0.6" }
urlencoded = "0.5"
mime = "0.2"
router = "0.5"
mount = "0.3"
staticfile = "0.4"
diesel = { version = "0.12", features = ["postgres", "extras"] }
diesel_codegen = { version = "0.12", features = ["postgres"] }
dotenv = "0.10"
postgres = "0.14"
chrono = "0.3"
handlebars = "0.25"
handlebars-iron = { version = "0.23", features = ["unstable"] }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
maplit = "0.1"
rust-crypto = "0.2"

clippy = {version = "0.0", optional = true}

[features]
default = []

[badges]
travis-ci = { repository = "https://travis-ci.org/SirRade/chat.rs" }

[package.metadata.release]
sign-commit = true
upload-doc = true
